syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

package protoversion;

message Version {
  uint32 major = 1;
  uint32 minor = 2;
  uint32 micro = 3;
  string additional = 4;
}

message GetVersionResponse {
  Version version = 1;
}

service Api {
  rpc GetVersion(google.protobuf.Empty) returns (GetVersionResponse) {
    option (google.api.http) = {
      get: "/version"
    };
  }
}
